new file:   img/common-columbine-8755584_1920.jpg 	new file:   img/gorilla-8760357_1920.jpg 	new file:   img/red-hair-girl-8158373_1920.jpg 	new file:   img/sunset-166637_1920.jpg 	new file:   img/swan-8242931_1920.jpg 	new file:   img/work-8772016_1920.jpg 	modified:   index.html 	modified:   main.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -4,28 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>HTML</title>
-  
-  <!-- HTML -->
-  
-
-  <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="es-wrapper" id="test">
     <div class="es-slider">
-      <div class="es-slide red"></div>
-      <div class="es-slide green"></div>
-      <div class="es-slide blue"></div>
-      <div class="es-slide yellow"></div>
-      <div class="es-slide violet"></div>
+      <div class="es-slide red">
+        <img src="img/common-columbine-8755584_1920.jpg" alt="">
+      </div>
+      <div class="es-slide green">
+        <img src="img/gorilla-8760357_1920.jpg" alt="">
+      </div>
+      <div class="es-slide blue">
+        <img src="img/red-hair-girl-8158373_1920.jpg" alt="">
+      </div>
+      <div class="es-slide yellow">
+        <img src="img/sunset-166637_1920.jpg" alt="">
+      </div>
+      <div class="es-slide violet">
+        <img src="img/swan-8242931_1920.jpg" alt="">
+      </div>
+      <div class="es-slide violet">
+        <img src="img/work-8772016_1920.jpg" alt="">
+      </div>
     </div>
     <div class="es-prev-slide"></div>
     <div class="es-next-slide"></div>
     <div class="es-navigation-wrapper">
+      <div class="es-navigation-item"></div>
       <div class="es-navigation-item"></div>
       <div class="es-navigation-item"></div>
       <div class="es-navigation-item"></div>
